# GenAI-SaaS-Boilerplate

./: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  requirements.txt  store.ts
api/: README.md  index.py  pyproject.toml
app/: layout.tsx
app/todo/: page.tsx
